Frontend: Fixing bug in Summary CSS
- elements were overflowing during animation,
which on mobile caused overflow of header

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -22,35 +22,7 @@
   --spacing-wrapper: 1400px;
   --spacing-headerPadding: 100px;
 
-  --animate-fallFromLeft: fallFromLeft 300ms ease-in-out forwards;
-
-  @keyframes fallFromLeft {
-    0% {
-      transform: translate(-200px, 0px);
-      opacity: 0;
-    }
-
-    100% {
-      transform: translate(0px, 0px);
-      opacity: 1;
-    }
-  }
-
-  --animate-fallFromRight: fallFromRight 300ms ease-in-out forwards;
-
-  @keyframes fallFromRight {
-    0% {
-      transform: translate(200px, 0px);
-      opacity: 0;
-    }
-
-    100% {
-      transform: translate(0px, 0px);
-      opacity: 1;
-    }
-  }
-
-  --animate-scaleUp: scaleUp 500ms ease-in-out forwards;
+  --animate-scaleUp: scaleUp 300ms ease-in-out forwards;
 
   @keyframes scaleUp {
     0% {
